@@ -1,5 +1,11 @@
 2020-09-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Björn Mellström
+	patch #9744: Patch for ATMega324A support
+	* avrdude.conf.in (m324a): New entry.
+
+2020-09-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Ronald Sutherland
 	patch #9811: ATmega328pb has efuse bit 3
 	* avrdude.conf.in (m328pb): Add own efuse definition
